--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </p>
         </div>
     </section>
+    <section>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
