--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>            
     </header>
         
-    <section class="hero"></section>
+    <section class="hero">
         <div class="content">
             <div id="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="pencils and paper pad with SEO" class="float-left" />
@@ -45,8 +45,8 @@
                 <img src="./assets/images/social-media-marketing.jpg" alt="a meeting with social meadia icons" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
-                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-                </p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the r`1ight markets and increase your lead generation.
+                </p>                
             </div>
         </div>
     </section>
