--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="a cog with three dollar signs underneath"></img>
+                <img src="./assets/images/cost-management.png" alt="a cog with three dollar signs underneath">
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
